hack/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: app
        image: k8s.gcr.io/e2e-test-images/echoserver:2.3
        ports:
        - containerPort: 8080
